--- a/Speart/src/vista/paneles/proceso/PnlProcesos.form
+++ b/Speart/src/vista/paneles/proceso/PnlProcesos.form
@@ -152,12 +152,13 @@
                           <Font name="Berlin Sans FB" size="12" style="0"/>
                         </Property>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                          <StringArray count="5">
-                            <StringItem index="0" value="ADMINISTRATIVA"/>
-                            <StringItem index="1" value="TECNICA"/>
-                            <StringItem index="2" value="PROFESIONAL"/>
-                            <StringItem index="3" value="DIRECCION"/>
-                            <StringItem index="4" value="DE SERVICIO"/>
+                          <StringArray count="6">
+                            <StringItem index="0" value="SELECCIONE UNA OPCI&#xd3;N"/>
+                            <StringItem index="1" value="ADMINISTRATIVA"/>
+                            <StringItem index="2" value="TECNICA"/>
+                            <StringItem index="3" value="PROFESIONAL"/>
+                            <StringItem index="4" value="DIRECCION"/>
+                            <StringItem index="5" value="DE SERVICIO"/>
                           </StringArray>
                         </Property>
                         <Property name="toolTipText" type="java.lang.String" value="Seleccione el tipo de actividad q ha ingresado"/>
